# NewViewDNN

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  train.cpp
src/analysis/: CMakeLists.txt  blinn-phong.frag  capture.cpp  capture.exe.stackdump  glutils.cpp  glutils.h  house.mtl  projection.frag  projection.vert  solid.vert  warp.cpp  warp.h
src/analysis/depth/: CMakeLists.txt  extract_pointcloud.cpp
src/models/: .gitignore  32x32-conv-autoencoder.py  32x32-vgg-autoencoder.py  autoencoder.py  find_mean.py  mnist-conv-autoencoder.py  networks.py  run-autoencoder.py  solver-1img.prototxt  solver-2img.prototxt  solver.prototxt  upconv-1img-32-test.prototxt  upconv-1img-32.prototxt  upconv-2img-128.prototxt  upconv-2img-1net.prototxt  upconv-2img-64.prototxt  utils.py  vgg16_autoencoder.py  vgg_autoencoder.py
src/models/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
src/models/checkpoints-32x32/: model.ckpt.index
src/models/checkpoints-4ch/: model.ckpt.data-00000-of-00001  model.ckpt.index
src/models/checkpoints-64x64x1/: model.ckpt.data-00000-of-00001
src/models/tensorflow/: 32x32-conv-autoencoder.bkp.py  32x32-conv-autoencoder.py  32x32-conv-autoencoder.py.bkp  MNIST-autoencoder.py  autoencoder.py  fullimage-conv-autoencoder.py  mnist-conv-autoencoder.py
src/models/tensorflow/checkpoints/: model.ckpt.index  (+1 more)
src/models/tensorflow/checkpoints-64x64x1/: model.ckpt.index
tests/: .gitignore  run-test.sh  run-tests.sh
utils/: .gitignore  create_inputs.py  find_mean.py  run.py  run.sh  uv_perspective_project.py  view_interpolate.py
